githubContributions 관련 api 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
         "@/*": [
           "src/*"
         ],
+        "@Type": [
+            "src/utils/Types.ts"
+        ],
       },
       "lib": [
         "ES6",
