기존 frontend에 있던 백엔드 내용들 벡엔드로 이동후 정리

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
         "@Type": [
             "src/utils/Types.ts"
         ],
+        "@Config":[
+            "src/config.ts"
+        ]
       },
       "lib": [
         "ES6",
